--- a/index.html
+++ b/index.html
@@ -10,36 +10,36 @@
 <body>
   <div class="calculator">
     <div class="screen">
-      <div id="previousCalc">test</div>
-      <div id="currentCalc">test</div>
+      <div id="previousCalc"></div>
+      <div id="currentCalc"></div>
     </div>
-      <div class="row">
-        <button id="c">C</button>
-        <button id="ac">AC</button>
+      <div class="row" id="row1">
+        <button id="clear">C</button>
+        <button id="allClear">AC</button>
       </div>
-      <div class="row">
-        <button class="number" id="7">7</button>
-        <button class="number" id="8">8</button>
-        <button class="number" id="9">9</button>
-        <button id="divide">÷</button>
+      <div class="row" id="row2">
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="operator" id="divide">÷</button>
       </div>
-      <div class="row">
-        <button class="number" id="4">4</button>
-        <button class="number" id="5">5</button>
-        <button class="number" id="6">6</button>
-        <button id="multiply">x</button>
+      <div class="row" id="row3">
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="operator" id="multiply">x</button>
       </div>
-      <div class="row">
-        <button class="number" id="1">1</button>
-        <button class="number" id="2">2</button>
-        <button class="number" id="3">3</button>
-        <button id="subtract">-</button>
+      <div class="row" id="row4">
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="operator" id="subtract">-</button>
       </div>
       <div class="row" id="row5">
-        <button class="number" id="0">0</button>
-        <button class="number" id="dot">.</button>
-        <button class="number" id="equals">=</button>
-        <button id="add">+</button>
+        <button class="number">0</button>
+        <button class="decimal" id="dot">.</button>
+        <button class="operator" id="equals">=</button>
+        <button class="operator" id="addition">+</button>
       </div>
   </div>
 </body>
