--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
         <button class="number">7</button>
         <button class="number">8</button>
         <button class="number">9</button>
-        <button class="operator" id="divide">÷</button>
+        <button class="operator">÷</button>
       </div>
       <div class="row" id="row3">
         <button class="number">4</button>
         <button class="number">5</button>
         <button class="number">6</button>
-        <button class="operator" id="multiply">x</button>
+        <button class="operator">x</button>
       </div>
       <div class="row" id="row4">
         <button class="number">1</button>
         <button class="number">2</button>
         <button class="number">3</button>
-        <button class="operator" id="subtract">-</button>
+        <button class="operator">-</button>
       </div>
       <div class="row" id="row5">
         <button class="number">0</button>
-        <button class="decimal" id="dot">.</button>
-        <button class="operator" id="equals">=</button>
-        <button class="operator" id="addition">+</button>
+        <button class="number">.</button>
+        <button id="equals">=</button>
+        <button class="operator">+</button>
       </div>
   </div>
 </body>
